# bench

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  README.md  bench.cpp
benchmark/: tBench.cpp
include/: ilp.hpp  rymap.hpp
src/: ilp.cpp
test/: tSimple.cpp  trymap.cpp  tsmall_function.cpp
test/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
test/googlemock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
